--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
         "Multi Device"
     ],
     "env": {
-        "SESSION_ID":cyber-x@;;;RM0USQiL#Vc_NxCUiPSRBK8l7jH1C0TvNh7NfXhJPM48XFIZZ0gA
+        "SESSION_ID":
             "description": "Type the Session-ID you got from scaning QR",
             "required": ,
             "value": ""
